# homework-upstream

./: .gitignore  README.md
hw1/: reflections.md
hw1/module_1/: Cargo.toml
hw1/module_1/src/: main.rs  solution.rs
hw1/module_1/tests/: tests.rs
hw1/module_2/: Cargo.toml
hw1/module_2/src/: animal.rs  coin.rs  lib.rs  main.rs  pizza.rs  rectangle.rs
hw1/module_2/tests/: tests.rs
hw1/module_3/: Cargo.toml
hw1/module_3/src/: basic.rs  hashmap.rs  lib.rs  main.rs  structure.rs  vector.rs
hw1/module_3/tests/: basic_tests.rs  hashmap_tests.rs  structure_tests.rs  vector_tests.rs
hw2/python-app/: .gitignore  README.md  agent_client_ollama.py  app.py  db.py  mcp_server.py  requirements.txt  test_db_app.py  test_db_mcp.py
hw2/python-app/test_data/: categories_mcp.json  designers_mcp.json  games_by_designer.json  games_by_name.json  score_candidates.json
